force-app/main/default/objects/ARF_Strategy_Execution__c/ARF_Strategy_Execution__c.object-meta.xml
<CustomObject>
    <description>Per-account tracking of collection strategy execution</description>
    <label>Strategy Execution</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>Strategy Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>