force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account this strategy is executing for</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategy_Executions</relationshipLabel>
    <relationshipName>Strategy_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>