force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <description>Current step number in the strategy</description>
    <label>Current Step</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>