force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Date__c</fullName>
    <description>When the last strategy step was executed</description>
    <label>Last Action Date</label>
    <type>DateTime</type>
</CustomField>