force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Last_Action_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Result__c</fullName>
    <description>Result of the last action taken</description>
    <label>Last Action Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>