force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <description>When the next strategy step should execute</description>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>