force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pause_Reason__c</fullName>
    <description>Why execution was paused</description>
    <label>Pause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Dispute Open</fullName><default>false</default><label>Dispute Open</label></value>
                <value><fullName>Promise Made</fullName><default>false</default><label>Promise Made</label></value>
                <value><fullName>Payment Received</fullName><default>false</default><label>Payment Received</label></value>
                <value><fullName>Manual Pause</fullName><default>false</default><label>Manual Pause</label></value>
                <value><fullName>Account On Hold</fullName><default>false</default><label>Account On Hold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>