force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Execution status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
                <value><fullName>Paused</fullName><default>false</default><label>Paused</label></value>
                <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
                <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>