force-app/main/default/objects/ARF_Strategy_Execution__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Strategy template being executed</description>
    <label>Strategy</label>
    <referenceTo>ARF_Collection_Strategy__c</referenceTo>
    <relationshipLabel>Executions</relationshipLabel>
    <relationshipName>Executions</relationshipName>
    <type>Lookup</type>
</CustomField>